--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -13,7 +13,6 @@
 \usepackage{color}
 \usepackage[margin=1in]{geometry}
 \usepackage{times,mathptmx}
-\usepackage{longtable}
 
 % Bold the 'Figure #' in the caption and separate it with a period
 % Captions will be left justified
@@ -63,28 +62,18 @@ How do the post-translational modifications [PTMs] change over time during micro
 
 \section{Introduction}
 
-Mass-spectrometry based proteomics \cite{Lamondetal2012} offers a unique way to characterize different post-translational modifications [PTMs] associated with proteins. PTMs are key in determining protein function, localization and regulation. Hundreds of PTMs are known \emph{in vivo}, however most of the current studies focus on identifying only few PTMs from mass-spec data. This is both because of computational limitations as well as the inefficiency of enrichment techniques to characterize or identify all PTMs. However with the improvement of search algorithms for an unrestricted search of PTMs, identifying multiple PTMs in \emph{tandem} has become a possibility. In this work, we used MODa \cite{Naetal2012}, a naive based spectral alignment algorithm to do an unrestricted search of PTMs from mass-spectrometry based proteomics data in \emph{E. coli} REL606 strain.
+Mass-spectrometry based proteomics \cite{Lamondetal2012} offers a unique way to characterize different post-translational modifications [PTMs] associated with proteins. PTMs are key in determining protein function, localization and regulation \cite{OlsenMann2013}. Hundreds of PTMs \cite{Garavellietal2001} \cite{CreasyCottrell2004} are known \emph{in vivo}, however most of the current studies focus on identifying only few PTMs from mass-spec data. This is both because of computational limitations and the inefficiency of enrichment techniques to characterize or identify all PTMs. However with the improvement of search algorithms for an unrestricted search of PTMs, identifying multiple PTMs in \emph{tandem} has become a possibility. In this work, we used MODa \cite{Naetal2012}, a naive based spectral alignment algorithm to do an unrestricted search of PTMs from mass-spectrometry based proteomics data in \emph{E. coli} REL606 strain.
 
-In a typical mass-spectrometry based proteomics experiment, proteins are first digested into peptides and then the sample is enriched for any PTMs of interest. This sample is then analyzed by mass-spectrometry. Peptide search algorithms are then run on this mass-spectrometry data to computationally identify peptides and PTMs associated with it. These search algorithms generally fall into 3 categories: (1) Sequence or database search algorithms, (2) de novo sequence search and (3) Hybrid approach that is a mixture of partial de novo search followed by a database search. Most of the current search algorithms such as Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004} search for only few variable modifications, i.e., oxidation of methionine etc or a small targeted list of PTMs. This technique of restricted search reduces the size of the database to search and hence alleviates lot of computational limitations \cite{McHughArthur2008}. Even though few of these algorithms report an option to do an unrestricted search, there are very few studies that reported an unrestricted search of PTMs using these algorithms. However, recently, software for unrestricted search of PTMs is starting to be available. MODa \cite{Naetal2012} is one such unrestricted search engine, along with others such as TagRecon\cite{Dasarietal2010} and Byonic \cite{Bernetal2012}. We used MODa, a spectral alignment algorithm that uses dynamic programming to identify small mass-tags and then join them reporting the delta masses between these mass tags. MODa is being used frequently to do an unrestricted search and identify novel PTMs. Some of the studies that used MODa were able to identify novel post-translational modifications, for example, a study on urine proteomics by Liu et. al \cite{Liuetal2013} were able to identify different PTMs without an enrichment of these post-translational modifications. Here we used MODa, first to do an unrestricted search to identify frequently occuring mass-shifts and focussed on the PTMs that seem abundant in this data or being reported to be critical with \emph{E. coli}. 
+In a typical mass-spectrometry based proteomics experiment, proteins are first digested into peptides and then the sample is enriched for any PTMs of interest. This sample is then analyzed by mass-spectrometry. Peptide search algorithms are then run on this mass-spectrometry data to computationally identify peptides and, if required PTMs associated with it. These search algorithms generally fall into 3 categories: (1) Sequence or database search algorithms, (2) de novo sequence search and (3) Hybrid approach that is a mixture of partial de novo search followed by a database search. Most of the current search algorithms such as Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004} search for only few variable modifications, i.e., oxidation of methionine etc or a small targeted list of PTMs. This technique of restricted search reduces the size of the database to search and hence alleviates lot of computational limitations \cite{McHughArthur2008}. Even though few of these algorithms report an option to do an unrestricted search, there are very few studies that reported an unrestricted search of PTMs using these algorithms. However, recently, software for unrestricted search of PTMs is starting to be available. MODa \cite{Naetal2012} is one such unrestricted search engine, along with others such as TagRecon\cite{Dasarietal2010} and Byonic \cite{Bernetal2012}. We used MODa, a spectral alignment algorithm that uses dynamic programming to identify small mass-tags and then join them reporting the delta masses between these mass tags. Some of the studies that used MODa were able to identify many post-translational modifications, for example, a study on urine proteomics by Liu et. al \cite{Liuetal2013} identified different PTMs without an enrichment of these post-translational modifications. Here we used MODa, first to do an unrestricted search to identify frequently occuring mass-shifts and focussed on the PTMs that seem abundant in this data or being reported to be critical with \emph{E. coli}. 
 
-%Mapping the entire proteome involves mapping all the post-translational modifications on the proteins. This is a challenging goal, given the enrichment techniques for PTMs along with the computational search algorithms to identify these PTMs.
-%In the last decade, however there has been lot of effort to improve search algorithms to increase the coverage of PTMs i.e., using unrestricted approaches instead of traditional search, where a guessed list of only handful PTMs is provided beforehand.
+In our current work, we generated mass-spectrometry data for \emph{E. coli} grown under glucose limiting conditions. As shown in many studies \cite{Soaresetal2013}\cite{Soufietal2015}, \emph{E. coli} grown under these nutrient limiting conditions generally behave differently at different phases of their growth i.e., during exponential and stationary phases. During the stationary phase, stress response proteins act because of the conditions caused by limiting nutrients, change in pH value, accumulation of toxic substances in the flasks etc \cite{Nystrom2004}. Most of the studies till now focussed on identifying proteins that were differentially expressed under these different conditions of growth. However, there are very few studies that looked at the PTM level information during such nutrient-limiting growth. In one study that looked at phosphoproteome \cite{Soaresetal2013}, the number of phosphorylation sites as well as their occupancy levels have been shown to increase from exponential to stationary phase, suggesting likely role of this PTM in stationary phase. In the same study, the authors showed that protein abundance of SspA, a stress protein seemed to be constant during the time course of growth, while the number of phosphorylated sites on the same protein increased. This clearly suggests PTM level quantitation to be key to understand how \emph{E. coli} responds to stress. In a recent study by Soufi et. al., \cite{Soufietal2015}, the authors investigated the \emph{E. coli} proteome dynamics at 7 different time points (exponetial to extended stationary phases) of growth. They looked at protein abundances, copy numbers and also investigated PTMs, but very briefly. Other than looking at at the pair-wise correlation of the PTMs identified in different stages of growth, there was no further analysis, such as PTM levels during different phases of growth, protein targets of these PTMs etc. Few other studies of PTMs focussed on multiple PTMs \cite{Guptaetal2007}, but they looked at only one "snapshot" of interest i.e., a single time point during the growth or used information from a larger database of processed mass-spectrometry data.
 
-In our current work, we generated mass-spectrometry data for \emph{E. coli} grown under glucose limiting conditions. As shown in many studies \cite{Soaresetal2013}\cite{Soufietal2015}, \emph{E. coli} grown under these nutrient limiting conditions generally behave differently at different phases of their growth i.e., during exponential and stationary phases. During the stationary phase, stress response proteins act because of the conditions caused by limiting nutrients, change in pH value, accumulation of toxic substances in the flasks etc \cite{Nystrom2004}. Most of the studies till now focussed on identifying proteins that were differentially expressed under these different conditions of growth. However, there are very few studies that looked at the PTM level information during such nutrient-limiting growth. In one study that looked at phosphoproteome \cite{Soaresetal2013}, the number of phosphorylation sites as well as their occupancy levels have been shown to increase from exponential to stationary phase, suggesting likely role of this PTM in stationary phase. In the same study, the authors showed that protein abundance of SspA, a stress protein seemed to be constant during the time course of growth, while the number of phosphorylated sites on the same protein increased. This clearly suggests PTM level quantitation to be key to understand how \emph{E. coli} responds to stress. In a recent study by Soufi et. al., \cite{Soufietal2015}, the authors investigated the \emph{E. coli} proteome dynamics at 7 different time points (exponetial to extended stationary phases) of growth. They looked at protein abundances, copy numbers and also investigated briefly on PTMs. In their work, the authors looked at the pair-wise correlation of the PTMs identified in different stages of growth. Even though the authors looked at few PTMs, they did not do PTM level quantitation. Our work is focussed not only on doing an unrestricted search of PTMs, but understanding the PTM levels during the exponential and long-stationary phases of \emph{E. coli} growth.
-
-%In another study, in \emph{acinetobacter baumannii} by the same group \cite{Soaresetal2010}, the oxidative stress has been shown to be compensated by the \emph{E. coli} machinery at the later stages of growth i.e., stationary phase compared to the early exponential phase. This itself suggests that PTM level analysis is necessary to understand the response of organisms to environmental and other disturbances.
-%\textbf{in ABOVE para, Not clear what "compensated by the E. coli machinery at later stages" means...is the point that A.b. regulates SspA by conrolling protein level?  What does the E. coli machinery have to do with this?}
-
-Few other studies of PTMs focussed on multiple PTMs \cite{Guptaetal2007}, but they looked at only one "snapshot" of interest i.e., a single time point during the growth or used information from a larger database of processed mass-spectrometry data. Our focus is to understand how these PTMs dynamically change during their growth in a single experiment. Since it has already been shown that during different phases of growth, different proteins will be expressed, a "snapshot" of PTM analysis does not provide a clearer picture on the significance or the function associated by these PTMs. Our current work of using multiple time points during the growth curve or looking at multiple "snapshots" along with an unrestricted search of PTMs provides a holistic view of proteome function. 
-
-%Few sites have been previously shown to be modified by different PTMs depending on the circumstances. So, analyzing multiple PTMs in tandem is necessary to understand behavior of microbes under different conditions. Here, we argue that we need a comprehensive analysis of PTMs at different time points to understand the PTM level response. 
-
-%Our earlier work using the protein, mRNA, lipid and metabolite level information at different phases in growth suggested the significance of such comprehensive analysis. However, we did not focus our earlier work at PTM level, but instead analyzed the protein abundances. Here, we did an unrestricted search to identify most of the PTMs and at 9 different time points during the exponential and long-stationary phases lasting upto 2 weeks.
+Here, apart from doing an unrestricted search of PTMs, we investigated the levels of the PTMs instead of typical protein quantitation. We then identified the most frequent mass-shifts at different phases of the growth, identified artifacts that increase the sensitivity of the search algorithm, when included and finally looked at the protein targets of some of the relevant PTMs. Since, we have the \emph{E. coli} protoemics data at many time-points during the growth, such analysis would provide a holistic view of proteome function. 
 
 \section{Results}
 
 \subsection{Running MODa on \emph{E. coli} proteome}
-Post-translational modifications, in most cases, determine the specific function of the protein. Identifying all the PTM combinations or the set of PTMs associated with all the proteins (i.e., entire proteome) is limited by experimental enrichment techniques for PTMs as well as computational limitations. The current analysis of \emph{E. coli} dataset is not enriched for any PTMs. This means that this dataset is suitable for hunting for different kinds of PTMs, instead of focussing on particular PTMs. Most of the current studies focus on a single PTM coverage, such as generally done in phosphoproteomics studies, glycosylation studies or acetylation studies, where the sample is enriched for a particular PTM. 
+Post-translational modifications, in most cases, determine the specific function of the protein. Identifying all the PTM combinations or the set of PTMs associated with all the proteins (i.e., entire proteome) is limited by experimental enrichment techniques for PTMs as well as computational limitations. The current analysis of \emph{E. coli} dataset is not enriched for any PTMs.  Most of the current studies focus on a single PTM coverage, such as generally done in phosphoproteomics studies, glycosylation studies or acetylation studies, where the sample is enriched for a particular PTM. 
 
 We have mass-spectrometry data at 9 different points of the OD600 curve (see Suppl Figure S1). At each time point, there were 3 biological replicates. We then used MODa on each of these data sets to identify the PTM level information. MODa is a sequence search algorithm that takes as an input mass-spectrometry data and identifies peptides and PTMs associated with the proteins. MODa is a naive based search algorithm that uses an unrestricted approach to find the post-translational modifications in the data. The parameters used with MODa is described in detail in the methods section of the paper. In brief, MODa uses multiple short sequence tag information in the spectra along with a dynamic programming approach to identify the peptide hits along with their protein identifiers. The use of multiple tags reduces both the database size and the false positives. MODa outputs 2 data files that we used in our analyses (1) it outputs the frequency of the mass-shifts on different amino-acids along with N- and C- term of the peptides, (2) it outputs peptide level information like most of other search engines. Once we have the MODa search results, we asked the following questions: (a) How much of the proteome is modified? (b) How do these modifications change over time? (c) Is there any biological relevance associated with the temporal change of a particular PTM? (c) Can we find any novel modifications in this \emph{E. coli} data? 
 
@@ -136,9 +125,9 @@ E. coli grown on glucose have shown to accumulate acetate \cite{Kuhnetal2014}. O
 
 \subsection{\emph{E. coli} Phosphorylation}
 
-Even though some of the mass-shifts that map to phosphorylation (+80Da), carboxylation (+44Da), nitrosylation (+29Da) were less abundant, we did a brief survey on these are some PTMs that were shown to be part of bacterial proteins. Most of the studies that looked at phosphoproteome involved enriching the sample for this PTM using techniques such as IMAC, TiO2 and then running mass-spectrometry on the sample. Figure~\ref{fig:Phos} shows the phosphorylations at different points of the growth curve. We considered only the phosphorylations on serine, threonine and tyrosine, as these are well known amino acids that get phosphorylated in most species including \emph{E. coli} \cite{Maceketal2008}. The number of phosphorylations we identified during the time course seem to be small. This is expected, as the sample is not enriched for phosphorylations. However, we observed that the phosphorylations increase from exponential to stationary phases. Such pattern is also previously shown in phosphoproteomic studies \cite{Soaresetal2013} probably pointing to a role of phosphorylation in later stages of the growth cycle.
+Even though some of the mass-shifts that map to phosphorylation (+80Da), carboxylation (+44Da), nitrosylation (+29Da) were less abundant, we did a brief survey on these PTMs, as these were shown to occur frequently in \emph{E. coli}. Most of the studies that looked at phosphoproteome involved enriching the sample for this PTM using techniques such as IMAC, TiO2 and then running mass-spectrometry on the sample. Figure~\ref{fig:Phos} shows the phosphorylations at different points of the growth curve. We considered only the phosphorylations on serine, threonine and tyrosine, as these are well known amino acids that get phosphorylated in most species including \emph{E. coli} \cite{Maceketal2008}. The number of phosphorylations we identified during the time course seem to be small. This is expected, as the sample is not enriched for phosphorylations. However, we observed that the phosphorylations increase from exponential to stationary phases. Such pattern is also previously shown in phosphoproteomic studies \cite{Soaresetal2013} probably pointing to a role of phosphorylation in later stages of the growth cycle. When we looked at the protein targets that get phosphorylated, during the exponential phase, only phosphoglucomutase (pgm) was phosphorylated. At later stages, along with pgm, elongation factor Tu, CTP snythetase, glyceraldehyde-3-phosphate dehydrogenase gapA and other transporters such as ferric citrate outer membrane transporter and copper/silver efflux system membrane component seem to be phosphorylated. 
 
-We then looked at carboxylations (See Suppl Figure S3)and nitrosylations (See Suppl Figure S4). Like, phosphorylations, carboxylations seem to increase during the later stages of the growth indicating a likely role of this PTM in late stationary phase. 
+We then looked at carboxylations (See Suppl Figure S3)and nitrosylations (See Suppl Figure S4). Like, phosphorylations, carboxylations seem to increase during the later stages of the growth indicating a likely role of this PTM in late stationary phase. Carboxylations and nitrosylations could also be caused due to artifacts, but since we did not see a constant level of these PTMs at different phases of growth, there might be some biological PTMs that have a role in cell function. 
 %\textbf{\emph{(There are studies linking cellular growth rate to carboxylases, may be related to what is shown here?)}} \textbf{\emph{A previous study in S-nitrosylation in E.coli \cite{Sethetal2012}}} \textbf{\emph{(read this to see if the pattern or the results hold).}} 
 
 \subsection{Oxidative damage and repair in \emph{E. coli}}
@@ -187,7 +176,7 @@ Most of the PTMs seem to occur less frequently, but sometimes seen on the same p
 
 %\textbf{\emph{SHOW MS/MS FOR NOVEL PTM, VERY IMP COMMENT BY MDP}}
 
-The recommended mass-shift for MODa program is finding mass-shifts between -200 and 200Da. However it is known that some PTMs are larger and would miss out using the recommended mass-range. So, to see if we can identify any frequently occuring peptide-spectrum matches with a higher mass-shift we changed this mass-range to -200 and 300. We did not identify any PSMs (peptide spectral matches) that occur frequently that have a mass greater than 200Da. 
+The recommended mass-shift for MODa program is finding mass-shifts between -200 and 200Da. However it is known that some PTMs are larger and would miss out using the recommended mass-range. So, to see if we can identify any frequently occuring peptide-spectrum matches with a higher mass-shift we changed this mass-range to -200 and 300. We did not identify any PSMs (peptide spectral matches) that occur frequently that have a mass greater than 200Da. Either these large PTMs are very low abundant and difficult to identify via mass-spec or other explanation could be \emph{E. coli} is a simple organism and might not have these high level PTMs, that we typically see in eukaryotes. 
 
 %This did not change previous results, but a +258 Da shift on serine on one of the peptides (ribosomal protein S6) is found consistently at all time points of the growth curve. When we looked into into literature, this seemed to be a combination of both phosphorylation and gluconylation on Serine (CITE).
 
@@ -195,6 +184,11 @@ The recommended mass-shift for MODa program is finding mass-shifts between -200 
 %Irrelevant at this time, may focus on this on similar studies later on.
 
 \section{Discussion}
+
+%Even though such dataset is suitable to hunt for different kinds of PTMs, instead of focussing on particular PTMs.
+
+%Mapping the entire proteome involves mapping all the post-translational modifications on the proteins. This is a challenging goal, given the enrichment techniques for PTMs along with the computational search algorithms to identify these PTMs.
+%In the last decade, however there has been lot of effort to improve search algorithms to increase the coverage of PTMs i.e., using unrestricted approaches instead of traditional search, where a guessed list of only handful PTMs is provided beforehand.
 
 We looked at temporal changes of the post-translational modifications in \emph{E. coli} REL606 strain. For this, we used mass-spectrometry based proteomics data. This data is collected under glucose limiting conditions for different phases of the growth i.e., exponetial to long-stationary phases upto 2 weeks under these conditions. For the 9 time points analyzed (3 hours to 2 weeks), several interesting insights into the frequency and the temporal changes of post-translational modifications seen in this analysis. First, we show that consistently 30\% of the proteome is modified at all the 9 time points analyzed. Second, we show that n-term protein acetylation goes up from exponential to stationary phases pointing to a likely role of this modification during late stages of the growth. Similar results were found for phosphorylation, carboxylation too. However, oxidative stress seem to go down from exponetial to stationary phases. Nutrient limitation, accumulation of toxic substances and change in pH were supposed to increase the oxidative stress, however \emph{E. coli} has a mechanism to protect the cell from oxidative damage using the sulfoxide reductases fixing MetSO back to Met. Finally, the computational techniques used in this study can be used with any mass-spectrometry based proteomics data to identify or characterize novel post-translational modifications.
 
