--- a/Manuscript/PTMsMODaBibliography.bib
+++ b/Manuscript/PTMsMODaBibliography.bib
@@ -633,5 +633,23 @@ Christopher, J. Marx and M. Stephen Trent and Jeffrey E. Barrick and Edward M. M
    number = {9},
    pages = {1362-77},
       year = {2007} }
+      
+ @article{CreasyCottrell2004,
+   author = {Creasy, D. M. and Cottrell, J. S.},
+   title = {Unimod: Protein modifications for mass spectrometry},
+   journal = {Proteomics},
+   volume = {4},
+   number = {6},
+   pages = {1534-6},
+   year = {2004} }
+
+ @article{Garavellietal2001,
+   author = {Garavelli, J. S. and Hou, Z. and Pattabiraman, N. and Stephens, R. M.},
+   title = {The RESID Database of protein structure modifications and the NRL-3D Sequence-Structure Database},
+   journal = {Nucleic Acids Res},
+   volume = {29},
+   number = {1},
+   pages = {199-201},
+   year = {2001} }
 
 
