--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -150,15 +150,15 @@ We then looked at carboxylations (See Suppl Figure S3)and nitrosylations (See Su
 %{HIV-2 protease is inactivated after oxidation at the dimer interface and activity can be partly restored with methionine sulphoxide reductase}
 %Next, we looked into oxidation of proteins. This is an important modification that has been linked to various diseases, along with a primary cause in aging (cite). Oxidation frequently occurs on cysteine and methionine and also has been shown to occur relatively less frequently on few other amino acids. However in our sample, since cysteine is capped to avoid disulphide bond formation, we expect +16 Dalton oxidation modification to occur primarily on methionone (see Suppl Figure 6). 
 
-\emph{E. coli} grown aerobically react with oxygen in the atmosphere producing reactive oxygen species such as H2O2 \cite{GonzalezDemple1995}. Targets for these ROS are generally proteins and lipids, that get oxidized. This oxidized state affects the protein structure and hence results in changes in its function leading to disturbances in the metabolism. Bacteria have genetic systems that responds to this oxidative stress through oxyR, SoxXY etc and more generally through reductases that reduce protein to its original non-oxidized state. These reductases where shown to play a criticial role in protection of proteins against oxidative stress in the past \cite{Vogt1995}. Here, we investigated the levels of oxidation during the different phases of growth, reductase enzyme levels along with identifying the protein targets of oxidation.
+\emph{E. coli} grown aerobically react with oxygen in the atmosphere producing reactive oxygen species such as H2O2 \cite{GonzalezDemple1995}. Targets for these ROS are generally proteins and lipids, that get oxidized. This oxidized state affects the protein structure and hence results in changes in its function leading to disturbances in the metabolism. Bacteria have genetic systems that responds to this oxidative stress through oxyR, SoxXY etc and more generally through reductases that reduce this oxidized protein state back to its original non-oxidized state. These reductases where shown to play a criticial role in protection of proteins against oxidative stress in the past \cite{Vogt1995}. Here, we investigated the levels of oxidation during the different phases of growth, the protein levels of these reductases at different phases of growth and also looked at oxidizied protein targets.
 
-Oxidation frequently occurs on cysteine and methionine and also has been shown to occur relatively less frequently on few other amino acids. However in a typical mass-spectrometry experiment, the cysteines are capped to avoid disulphide bond formation. Hence, in our analysis, we expect to see lot of methionine oxidation. To validate this, we plotted the frequencies of mass-shifts occuring on different amino acids possible. Suppl Figure 6 shows this profile. It is clear from this amino acid profile that methionine oxidation is the frequent one.
+Oxidation frequently occurs on cysteine and methionine and also has been shown to occur relatively less frequently on few other amino acids. However in a typical mass-spectrometry experiment, the cysteines are capped to avoid disulphide bond formation. So, in our analysis, we expect to see lot of methionine oxidation. To validate this, we plotted the frequencies of +!6 Da mass-shift on different amino acids possible. Suppl Figure 6 shows this profile. It is clear from this amino acid profile that methionine oxidation is the frequent one.
 
-Next, we looked at the time-course of these oxidation levels. We plotted both the global oxidation levels (i.e., oxidation occuring on all amino acids) as well as oxidation levels of only methionine. Figure~\ref{fig:Oxid} (A) shows the global oxidation levels occuring on all amino acids. The oxidations seem to go down from exponential to stationary to long stationary phases. Figure~\ref{fig:Oxid} (B) shows the oxidation occuring on methionine only. The pattern seems to be same as the global oxidation level i.e., goes down from exponential to stationary phases. Since oxidative stress during stationary phase leads to accumulation of reactive oxygen species (ROS), we expected the oxidation levels to go up from exponential to stationary phases. However, the observed trend is opposite to what we expected. There could be 2 possible explanations (1) Either the level of methionines went up from exponential to stationary phases and/or (2) \emph{E. coli's} bacterial genetic system is acting to bring the oxidation levels down to protect against this oxidative damage. The number of methionines seemed more or less constant during the entire time course (data not shown). To see if \emph{E. coli} machinery is responding, we looked into literature to find any such reductases that fix methionine sulfoxide (MetSO) back to methionine (Met).  There seems to be 2 such reductases, MsrA \cite{Abramsetal1981} and MsrB \cite{Grimaudetal2001}, in \emph{E. coli}. yeaA is ortholog of MsrB in the REL606 strain. Since MODa also outputs the peptide and hence the protein level information, we plotted the protein abundances of these reductases in Figure~\ref{fig:MsrAB}. There seems to be a sudden increase in the levels of these proteins during stationary and long-stationary phases that might explain the lower levels of methionine oxidation levels. We also validated this result using our previous work \cite{Houseretal2015} on protein level analysis on this data using Sequest, a different protein identification search engine. A point to note is that we could not use the previous search results for our multiple PTM analysis here, as the only variable modification used in that study is oxidation methionine. The Sequest result is shown as a fig:SequestMODaFig (see Suppl Figure 7).
+Next, we looked at the time-course of these oxidation levels. For this, We looked at both the global oxidation levels (i.e., oxidation occuring on all amino acids) and just the methionine oxidation level. Figure~\ref{fig:Oxid} (A) shows the global oxidation levels occuring on all amino acids. The oxidations seem to go down from exponential to stationary to long stationary phases. Figure~\ref{fig:Oxid} (B) shows the oxidation occuring on methionine only. The pattern seems to be same as the global oxidation level i.e., goes down from exponential to stationary phases. Since oxidative stress during stationary phase leads to accumulation of reactive oxygen species (ROS), we expected the oxidation levels to go up from exponential to stationary phases. However, the observed trend is opposite to what we expected. There could be 2 possible explanations (1) Either the level of methionines went up from exponential to stationary phases and/or (2) \emph{E. coli's} bacterial genetic system is acting to bring the oxidation levels down to protect against this oxidative damage. The number of methionines seemed more or less constant during the entire time course (data not shown). To see if \emph{E. coli} machinery is responding, we looked into literature to find any such reductases that fix methionine sulfoxide (MetSO) back to methionine (Met).  There are 2 such reductases, MsrA \cite{Abramsetal1981} and MsrB \cite{Grimaudetal2001}, in \emph{E. coli}. yeaA is ortholog of MsrB in the REL606 strain. We were able to look at the protein levels of these reductases, as MODa also outputs the peptide/protein level information for each peptide-spectral match. Figure~\ref{fig:MsrAB} shows these protein abundances. There seems to be a sudden increase in the levels of these proteins during stationary and long-stationary phases, probably trying to fix MetSO back to Met. This might explain the lower levels of methionine oxidation levels at later stages of the growth. We also validated this result using our previous work \cite{Houseretal2015} on protein level analysis on this data using Sequest, a different protein identification search engine. A point to note is that we could not use the previous search results for our multiple PTM analysis here, as the only variable modification used in that study is oxidation methionine. The Sequest result is shown as a fig:SequestMODaFig (see Suppl Figure 7).
 
-Then we looked at the protein oxidation targets at these different points of time course. Alkyl hydroperoxide reductase subunit, elongation factor Tu, chaperonin GroEL, S-methyltransferase, cytochrome d ubiquinol oxidase, elongation factor G, phosphoribosylaminoimidazole-succinocarboxamide synthase were found to be the major oxidation targets. Some of these were not shown previously to be oxidation targets. Most of the proteins were also seem to be oxidized at later stages of growth i.e., during stationary and late-stationary phases. The supplementary data lists all the proteins along with their frequencies at all the time points of growth. A separate supplementary information also lists that the peptides that were seem to be oxidized.
+Then we looked at the protein oxidation targets at these different points of time course. Previously elongation factor Tu, chaperonin GroEL and other proteins were identified as major protein oxidation targets. In our study, along with these, we identified some other proteins that are oxidized abundantly. In exponential phase, these were Alkyl hydroperoxide reductase subunit (ahpC), S-methyltransferase , cytochrome d ubiquinol oxidase, elongation factor G, phosphoribosylaminoimidazole-succinocarboxamide synthase. Most of the proteins were also seem to be oxidized at later stages of growth i.e., during stationary and late-stationary phases. The supplementary data lists all the proteins along with their frequencies at all the time points of growth. A separate supplementary information also lists that the peptide, along with the positions at which these are oxidized.
 
-One of the mass-shifts that seem dominant and occur primarily is -2 Da mass-shift on methionine. In Unimod, this was reported as methionine to glutamine substitution. An alternate description given in unimod is that it could be misacylation of the tRNA. However, to cope up dealing with the oxidative stress, methionine substitution to glutamine might be an alternate way for \emph{E. coli} to not let protein being oxidized. However, this substitution decreases from exponential to stationary phase (see Suppl Figure), probably suggesting other likely role.
+Another mass-shift that seem dominant on methionine is -2 Da. In Unimod, this was reported as methionine to glutamine substitution. An alternate description given in unimod is that it could be misacylation of the tRNA. However, to cope up dealing with the oxidative stress, methionine substitution to glutamine might be an alternate way for \emph{E. coli} to not let protein being oxidized. However, this substitution decreases from exponential to stationary phase (see Suppl Figure), probably suggesting other likely role.
 
 \subsection{Other PTMs and artifacts}
 %\textbf{CB Comment: Is this the Weinert et al succinylation paper?  Weren't there lots of targets identified?}
